Elk_GitOpsFalse/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pure-gitops-rollout
spec:
  selector:
    app: pure-gitops-rollout
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
